# uclales-cloud-tracking

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/Modules/: FindNetCDF.cmake
doc/: Doxyfile  Doxyfile.in  Makefile  README.md
misc/analysis/tracking/: .gitignore  Makefile  cloud_tracking.f90  methods.md  tracking_new.f90
misc/analysis/tracking/doc/: Doxyfile
src/: constants.f90  field_loader.f90  main.f90  modarray.f90  modnetcdf.f90  modoffset_fields.f90  modstatistics.f90  modtrack.f90  modtrack_cell_splitting.f90  tracking_common.f90  tracking_data.f90  tracking_netcdf_handling.f90  tracking_new.f90
tests/: runner.py  test_default.py  test_horizontal_offsetting.py  test_synthetic_datasets.py  utils.py
tests/testdata/: testdata.out.xy.track.nc
